[gd_scene load_steps=4 format=3 uid="uid://u1i8qpwxsp7"]

[ext_resource type="Script" path="res://Scripts/Components/BreakingPlatform.gd" id="1_6bppq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trjrq"]
size = Vector2(96, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7l0r"]
size = Vector2(96, 2)

[node name="BreakingPlatform" type="StaticBody2D"]
script = ExtResource("1_6bppq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4.76837e-07, 0)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -48.0
offset_top = -8.0
offset_right = 48.0
offset_bottom = 8.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_trjrq")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_j7l0r")
debug_color = Color(0.960784, 0.141176, 0.364706, 0.419608)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
